--- a/pages/Blog.html
+++ b/pages/Blog.html
@@ -52,8 +52,11 @@
                         <div class="card" style="height:600px;">
                             <img src="../imagen/blog1.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <h5 class="card-title">Cotorras en rural</h5>
+                                <p class="card-text">Las cotorras en la zona rural habitan alimentandose de diferentes alimentos de la zona. Hoy en dia la caza de cotorras esta aumentando y la venta ilegal esta siendo mas comun en la zona central , es por ello que abrimos
+                                    centro de voluntariados que se encargan de recibir informacion de los habitantes de la zona para detener a estos vendores ilegales. Parrots Lori's pretende minimizar la venta ilegal, ya que siempre es preferible adoptar
+                                    . Leer mas de click.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -61,36 +64,41 @@
                         <div class="card" style="height:600px;">
                             <img src="../imagen/blog2.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <h5 class="card-title">Debate de opiniones en España</h5>
+                                <p class="card-text">Algunas especies exóticas invasoras amenazan a especies autóctonas, a los ecosistemas y a las actividades ligadas al patrimonio natural, como es el caso de las cotorras argentinas, cuya presencia se encuentra en 140 municipios,
+                                    especialmente en Barcelona, Madrid y Málaga, en torno al 80 por ciento de los ejemplares de toda España. ¿Sabías que está prohibido tener este ave de mascota?
                             </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card">
-                            <img src="../imagen/blog3.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card" style="height:750px;">
-                            <img src="../imagen/blog4.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card" style="height:750px;">
                             <img src="../imagen/blog5.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            </div>
+                                <h5 class="card-title">¿Provocan daño?</h5>
+                                <p class="card-text">Pero, ¿por qué es este ave un problema para el ecosistema? Entre los diferentes motivos para considerar invasora y peligrosa una especie, en el caso de la cotorra argentina se destaca su manera de alimentarse, ya que compite
+                                    por la comida contra otras especies autóctonas y caza huevos y pollos de aves más pequeñas. Además, también provoca daños en cultivos (especialmente en árboles frutales) y en la vegetación, al construir sus nidos de
+                                    gran tamaño.</div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card" style="height:650px;">
+                            <img src="../imagen/blog4.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Las cotorras avanzan sobre provincias argentinas
+                                </h5>
+                                <p class="card-text">Las provincias de Mendoza, Corrientes, Santiago del Estero y Buenos Aires miran con atención el avance de las aves cata común o cata Verde, conocidas como "cotorritas", por el daño que provocan en algunos cultivos, luego
+                                    de que fueran declaradas plaga en la comunidad española de Madrid y en zonas de Chile. El Instituto de Sanidad y Calidad Agropecuaria Mendoza (ISCAMEN) declaró como plaga para la agricultura en todo el territorio provincial
+                                    en el mes de noviembre a esas aves.</div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card" style="height:650px;">
+                            <img src="../imagen/blog3.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Cuidados</h5>
+                                <p class="card-text">
+                                    Resultado de imagen para cotorras libres argentinas En el interior de la jaula deberán existir perchas para que la cotorra se pose, juguetes (que tarde o temprano serán destruidos), y una malla en el suelo, a unos cms del piso, que impida que la cotorra
+                                    ingiera sus heces y enferme. </div>
                         </div>
                     </div>
                     <div class="col">
@@ -106,27 +114,29 @@
                         <div class="card">
                             <img src="../imagen/blog7.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            </div>
+                                <h5 class="card-title">Necesidad de controlabilidad?</h5>
+                                <p class="card-text">A tiros. Así ha decidido el Ayuntamiento de Madrid realizar el "control de especies invasoras" y, más en concreto, de las cotorras argentinas (Myiopsitta monachus). La cotorra argentina, que desde hace unos años ha asaltado
+                                    los parques de la capital está incluida dentro del Catálogo de Especies Invasoras. El alcalde de Madrid, José Luis Martínez-Almeida, ha defendido este viernes el plan del Ayuntamiento de Madrid para reducir el número
+                                    de las cotorras argentinas en Madrid, y ha destacado que fue aprobado por el Gobierno regional "en materia de protección de animales" así como que incluye la caza con carabina en casos "excepcionales".</div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card">
                             <img src="../imagen/blog8.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            </div>
+                                <h5 class="card-title">Cuanto vive un periquito?</h5>
+                                <p class="card-text">Muchas personas optan por tener un pájaro como mascota y entre las aves más comunes como animales de compañía están los periquitos, junto con los canarios, los agapornis y las cacatúas. Además, los pájaros pueden ser una
+                                    buena opción como primera mascota para niños, sobre todo para acostumbrar a los más pequeños a asumir las responsabilidades que conlleva tener un animal en casa. Pero antes de adoptar un periquito es importante conocer
+                                    cuánto viven los periquitos, cómo cuidarlos y tener en cuenta las necesidades especiales de esta especie.</div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card" style="height:550px;">
                             <img src="../imagen/blog9.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            </div>
+                                <h5 class="card-title">Deteccion</h5>
+                                <p class="card-text">La Confederación Hidrográfica del Guadiana ha detectado la presencia de cotorras argentinas en el parque fluvial situado en la margen derecha del río Guadiana, a su paso por la localidad de Mérida.</p>
+                                La detección se ha producido gracias a los trabajos de vigilancia y alerta temprana de especies exóticas que el organismo de cuenca viene desarrollando desde hace años, según ha informado esta entidad en un comunicado.</div>
                         </div>
                     </div>
 
