--- a/pages/Blog.html
+++ b/pages/Blog.html
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card" style="height:650px;">
+                        <div class="card" style="height:750px;">
                             <img src="../imagen/blog4.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Las cotorras avanzan sobre provincias argentinas
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card" style="height:650px;">
+                        <div class="card" style="height:750px;">
                             <img src="../imagen/blog3.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Cuidados</h5>
@@ -105,9 +105,9 @@
                         <div class="card">
                             <img src="../imagen/blog6.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            </div>
+                                <h5 class="card-title">Madrid 2020</h5>
+                                <p class="card-text">TEl plan de exterminio –que se vio interrumpido por la pandemia de coronavirus– contemplaba una sucesión de acciones: captura de los ejemplares, control de puestas, apeo de nidos y retirada de restos, control biológico
+                                    y veterinario y muerte de los individuos capturados.</div>
                         </div>
                     </div>
                     <div class="col">
@@ -136,7 +136,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Deteccion</h5>
                                 <p class="card-text">La Confederación Hidrográfica del Guadiana ha detectado la presencia de cotorras argentinas en el parque fluvial situado en la margen derecha del río Guadiana, a su paso por la localidad de Mérida.</p>
-                                La detección se ha producido gracias a los trabajos de vigilancia y alerta temprana de especies exóticas que el organismo de cuenca viene desarrollando desde hace años, según ha informado esta entidad en un comunicado.</div>
+                            </div>
                         </div>
                     </div>
 
