--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-
+    <meta name="description" content="Nuestra compania Parrots Lori's se dedica a la asistencia de cuidados y producto para aves exoticas.">
+    <meta name="keywords" content="Cotorra Argentina, MADRID, ARGENTINA, ALIMENTO COTORRA , AVES EXOTICAS, PARROTS LORI'S">
     <title>Parrots Lori's</title>
 </head>
 
@@ -254,7 +255,7 @@
                 <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 ">
                     <h6 class="text-uppercase font-weight-bold ">Parrots Loris's</h6>
                     <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto " style="width: 60px; ">
-                    <p>Nuestra compania se dedica a la asistencia de cuidados y producto para aves exoticas. Contactenos!</p>
+                    <p>Nuestra compania Parrots Lori's se dedica a la asistencia de cuidados y producto para aves exoticas. Contactenos!</p>
                 </div>
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 ">
                     <h6 class="text-uppercase font-weight-bold ">Products</h6>
