--- a/pages/Products.html
+++ b/pages/Products.html
@@ -52,8 +52,8 @@
                         <div class="card">
                             <img src="../imagen/producto1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <h5 class="card-title">Tira de maderas x5</h5>
+                                <p class="card-text">Juguete para loros , fundamental para entretener a nuestras cotorras . </p>
                             </div>
                         </div>
                     </div>
@@ -61,8 +61,8 @@
                         <div class="card">
                             <img src="../imagen/producto2.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <h5 class="card-title">Tira reforzada</h5>
+                                <p class="card-text">Juguete para loros , fundamental para entretener a nuestras cotorras .</p>
                             </div>
                         </div>
                     </div>
@@ -70,8 +70,8 @@
                         <div class="card">
                             <img src="../imagen/producto3.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                                <h5 class="card-title">Tira con palillos</h5>
+                                <p class="card-text">Juguete para loros , fundamental para entretener a nuestras cotorras .</p>
                             </div>
                         </div>
                     </div>
@@ -79,8 +79,8 @@
                         <div class="card">
                             <img src="../imagen/producto4.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <h5 class="card-title">Tira de palillos x 4</h5>
+                                <p class="card-text">Juguete para loros , fundamental para entretener a nuestras cotorras .</p>
                             </div>
                         </div>
                     </div>
@@ -88,8 +88,8 @@
                         <div class="card">
                             <img src="../imagen/producto5.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <h5 class="card-title">Kit de juego para cotorras</h5>
+                                <p class="card-text">Juguete para loros , fundamental para entretener a nuestras cotorras .</p>
                             </div>
                         </div>
                     </div>
@@ -97,8 +97,8 @@
                         <div class="card">
                             <img src="../imagen/producto6.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <h5 class="card-title">Kit de juego para cotorras opcion2</h5>
+                                <p class="card-text">Juguete para loros , fundamental para entretener a nuestras cotorras .</p>
                             </div>
                         </div>
                     </div>
@@ -106,8 +106,8 @@
                         <div class="card">
                             <img src="../imagen/producto7.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <h5 class="card-title">Kit de cuerda para Loros</h5>
+                                <p class="card-text">Juguete para loros , fundamental para entretener a nuestras cotorras .</p>
                             </div>
                         </div>
                     </div>
@@ -115,45 +115,45 @@
                         <div class="card">
                             <img src="../imagen/producto8.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            </div>
+                                <h5 class="card-title">Kit de juego reforzado para cotorras</h5>
+                                <p class="card-text">Juguete para loros , fundamental para entretener a nuestras cotorras .</p>
+                           </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card">
                             <img src="../imagen/producto9.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            </div>
+                                <h5 class="card-title">Kit de juego para cotorras opcion3</h5>
+                                <p class="card-text">Juguete para loros , fundamental para entretener a nuestras cotorras .</p>
+                           </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card">
                             <img src="../imagen/producto10.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            </div>
+                                <h5 class="card-title">Mini tira</h5>
+                                <p class="card-text">Juguete para loros , fundamental para entretener a nuestras cotorras .</p>
+                                               </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card">
                             <img src="../imagen/producto11.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            </div>
+                                <h5 class="card-title">Kit de juego para cotorra australianas</h5>
+                                <p class="card-text">Juguete para loros , fundamental para entretener a nuestras cotorras .</p>
+                           </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card">
                             <img src="../imagen/producto12.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            </div>
+                                <h5 class="card-title">Kit de juego de llaves para cotorras</h5>
+                                <p class="card-text">Juguete para loros , fundamental para entretener a nuestras cotorras .</p>
+                          </div>
                         </div>
                     </div>
                 </div>
